--- a/excercise/case_study/css/style.css
+++ b/excercise/case_study/css/style.css
@@ -277,5 +277,7 @@ h2 {
     -webkit-box-shadow: 0px 0 0px rgba(0, 0, 0, 0.1);
     box-shadow: 0px 0 0px rgba(0, 0, 0, 0.1);
 }
-
+header{
+    background: #addccf;
+}
 
