--- a/sprint_2/figure-shop/public/css/cart.css
+++ b/sprint_2/figure-shop/public/css/cart.css
@@ -1,79 +1,151 @@
-.title-cart {
-    font: 32px "Open Sans", sans-serif;
-    color: #fa6e4f;
+.body-cart{
+    background: #ddd;
+    min-height: 100vh;
+    vertical-align: middle;
+    display: flex;
+    font-family: sans-serif;
+    font-size: 0.8rem;
     font-weight: bold;
 }
-.title-h5{
-    font: 20px "Open Sans", sans-serif;
-    font-weight: bold;
-    color: white;
+.title-cart{
+    margin-bottom: 5vh;
 }
-.div-title-cart{
-    margin-top: 12%;
+.summary{
+    background-color: #ddd;
+    border-top-right-radius: 1rem;
+    border-bottom-right-radius: 1rem;
+    padding: 4vh;
+    color: rgb(65, 65, 65);
 }
-.font-address{
-    font: 18px "Open Sans", sans-serif;
-    color: white;
+@media(max-width:767px){
+    .summary{
+        border-top-right-radius: unset;
+        border-bottom-left-radius: 1rem;
+    }
 }
-.counter {
-    justify-content: center;
-    font-size: 0px;
+.summary .col-2{
+    padding: 0;
 }
-
-.counter button {
-    padding: 14px 10px 5px 10px;
-    color: #fa6e4f;
-    background: white;
-    border: 2px solid #fa6e4f;
+.summary .col-10
+{
+    padding: 0;
+}.row{
+     margin: 0;
+ }
+.title b{
+    font-size: 1.5rem;
 }
-.counter span {
-    padding: 10px;
-    font-size: 16px;
+.main{
+    margin: 0;
+    padding: 2vh 0;
+    width: 100%;
 }
-.font-cart{
-    font: 16px "Open Sans", sans-serif;
-    color: #fa6e4f;
+.col-2, .col{
+    padding: 0 1vh;
 }
-.svg-cart{
-    margin: -15px -10px -6px -10px;
+.a-cart{
+    padding: 0 1vh;
 }
-.counter button:hover {
-    color: white;
-    background: #fa6e4f;
+.close{
+    margin-left: auto;
+    font-size: 0.7rem;
 }
-.svg-delete{
-    padding: 5px 12px 5px 12px;
-    background: red;
-    color: white;
+.img-cart-hihi{
+    width: 3.5rem;
 }
-.svg-delete:hover{
-    background: white;
-    color: red;
+.back-to-shop{
+    margin-top: 4.5rem;
 }
-.background-cart{
-    background: #fa6e4f;
-
+.h5-cart{
+    margin-top: 4vh;
 }
-.left {
-    text-align: left;
-    color: white;
+.hr-cart{
+    margin-top: 1.25rem;
 }
-.right{
-    text-align: right;
-    color: white;
+.form-cart{
+    padding: 2vh 0;
 }
-.margin-cart{
-    margin-top: 20px;
+.select-cart{
+    border: 1px solid rgba(0, 0, 0, 0.137);
+    padding: 1.5vh 1vh;
+    margin-bottom: 4vh;
+    outline: none;
+    width: 100%;
+    background-color: rgb(247, 247, 247);
 }
-.price{
-    font-size: 32px;
-    font-weight: bold;
+.input-cart{
+    border: 1px solid rgba(0, 0, 0, 0.137);
+    padding: 1vh;
+    margin-bottom: 4vh;
+    outline: none;
+    width: 100%;
+    background-color: rgb(247, 247, 247);
+}
+input:focus::-webkit-input-placeholder
+{
+    color:transparent;
 }
 .btn-cart{
-    background: #fa6e4f;
+    background-color: #fa6e4f;
+    border-color: #fa6e4f;
     color: white;
-    border: 2px solid #fa6e4f;
-    margin-top: 20px;
+    width: 100%;
+    font-size: 1.5rem;
+    margin-top: 4vh;
+    padding: 1vh;
+    border-radius: 0;
+}
+.btn-cart:hover{
+    background-color: white;
+    color: #fa6e4f;
+    border-color: white;
+}
+.btn-cart:focus{
+    box-shadow: none;
+    outline: none;
+    box-shadow: none;
+    color: white;
+    -webkit-box-shadow: none;
+    -webkit-user-select: none;
+    transition: none;
+}
+.btn-cart:hover{
+    background: white;
+    color: #fa6e4f;
+}
+.a-cart{
+    color: #fa6e4f;
+}
+.a-cart:hover{
+    color: #fa6e4f;
+    text-decoration: none;
+}
+#code{
+    background-image: linear-gradient(to left, rgba(255, 255, 255, 0.253) , rgba(255, 255, 255, 0.185)), url("https://img.icons8.com/small/16/000000/long-arrow-right.png");
+    background-repeat: no-repeat;
+    background-position-x: 95%;
+    background-position-y: center;
+}
+.cart-margin{
+    margin-top: 165px;
+}
+b {
+    color: #fa6e4f;
+}
+.item {
+    font-weight: bold;
+    color: black;
+}
+.img-cart {
+    text-align: center;
     width: 100%;
     height: 100%;
+    max-width: 100%;
+    max-height: 75%;
+}
+.input-c[type="text"] {
+    width: 20px;
+    height: 20px;
+    border: none;
+    text-align: center;
 }
