--- a/sprint_2/figure-shop/public/css/login.css
+++ b/sprint_2/figure-shop/public/css/login.css
@@ -1,167 +1,123 @@
-body{
-    margin:0;
-    color:#6a6f8c;
-    background:#c8c8c8;
-    font:600 16px/18px 'Open Sans',sans-serif;
+* {
+    font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu,
+    sans-serif;
 }
-*,:after,:before{box-sizing:border-box}
-.clearfix:after,.clearfix:before{content:'';display:table}
-.clearfix:after{clear:both;display:block}
-a{color:inherit;text-decoration:none}
-
-.login-wrap{
-    width:100%;
-    margin:auto;
-    max-width:525px;
-    min-height:670px;
-    position:relative;
-    background-size: 100% 100%;
+.login-container {
+    margin: 200px 0;
 }
-.login-html{
-    width:80%;
-    height:80%;
-    position:absolute;
-    padding:25px 70px 50px 70px;
-    margin: 65px;
-    margin-top: 84px;
+.login {
+    background-color: #f26b38;
+    color: #fff;
+    font-size: 14px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    outline: none;
+    border: none;
+    height: 50px;
+    border-radius: 3px;
 }
-.login-html .sign-in-htm,
-.login-html .sign-up-htm{
-    top:0;
-    left:0;
-    right:0;
-    bottom:0;
-    position:absolute;
-    transform:rotateY(180deg);
-    backface-visibility:hidden;
-    transition:all .4s linear;
+table {
+    border-collapse: separate !important;
+    border-spacing: 0 7px;
 }
-.login-html .sign-in,
-.login-html .sign-up,
-.login-form .group .check{
-    display:none;
+form .title-login {
+    font-size: 28px;
+    font-weight: 600;
 }
-.login-html .tab,
-.login-form .group .label,
-.login-form .group .button{
-    text-transform:uppercase;
-}
-.login-html .tab{
-    font-size:22px;
-    margin-right:15px;
-    padding-bottom:5px;
-    margin:0 15px 10px 0;
-    display:inline-block;
-    border-bottom:2px solid transparent;
-}
-.login-html .sign-in:checked + .tab,
-.login-html .sign-up:checked + .tab{
-    color:black;
-    border-color:black;
-}
-.login-form{
-    min-height:345px;
-    position:relative;
-    perspective:1000px;
-    transform-style:preserve-3d;
-}
-.login-form .group{
-    margin-bottom:15px;
-}
-.login-form .group .label,
-.login-form .group .input,
-.login-form .group .button{
-    width:100%;
-    color:black;
-    display:block;
-}
-.login-form .group .input,
-.login-form .group .button{
-    border: 1px solid black;
-    padding:5px 20px;
-    border-radius:25px;
-    background:rgba(255,255,255,.1);
-}
-.login-form .group input[data-type="password"]{
-    text-security:circle;
-    -webkit-text-security:circle;
-}
-.login-form .group .label{
-    color:#aaa;
-    font-size:12px;
-}
-.login-form .group .button{
-    background:#1161ee;
-}
-.login-form .group label .icon{
-    width:15px;
-    height:15px;
-    border-radius:2px;
-    position:relative;
-    display:inline-block;
-    background:rgba(255,255,255,.1);
-}
-.login-form .group label .icon:before,
-.login-form .group label .icon:after{
-    content:'';
-    width:10px;
-    height:2px;
-    background:#fff;
-    position:absolute;
-    transition:all .2s ease-in-out 0s;
-}
-.login-form .group label .icon:before{
-    left:3px;
-    width:5px;
-    bottom:6px;
-    transform:scale(0) rotate(0);
-}
-.login-form .group label .icon:after{
-    top:6px;
-    right:0;
-    transform:scale(0) rotate(0);
-}
-.login-form .group .check:checked + label{
-    color:#fff;
-}
-.login-form .group .check:checked + label .icon{
-    background:#1161ee;
-}
-.login-form .group .check:checked + label .icon:before{
-    transform:scale(1) rotate(45deg);
-}
-.login-form .group .check:checked + label .icon:after{
-    transform:scale(1) rotate(-45deg);
-}
-.login-html .sign-in:checked + .tab + .sign-up + .tab + .login-form .sign-in-htm{
-    transform:rotate(0);
-}
-.login-html .sign-up:checked + .tab + .login-form .sign-up-htm{
-    transform:rotate(0);
-}
-
-.hr{
-    height:2px;
-    margin:60px 0 50px 0;
-    background:rgba(255,255,255,.2);
-}
-.foot-lnk{
-    text-align:center;
-}
-.container-fluid {
-    position: relative;
-}
-
-.container-fluid:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
+td input {
     width: 100%;
-    height: 100%;
-    background-image: url("https://wallpapercave.com/wp/wp2771916.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    opacity: 0.5; /* Tùy chỉnh độ mờ */
-    z-index: -1; /* Đảm bảo ảnh nền nằm phía sau form */
+    height: 50px;
+    border: 1px solid #ced0da;
+    padding: 10px;
+    font-size: 14px;
+}
+table {
+    width: 490px;
+}
+.modify-title {
+    width: 490px;
+    font-size: 14px;
+    color: #a0a3a7;
+}
+.other-login {
+    display: flex;
+    justify-content: space-between;
+    font-size: 14px;
+    color: #a0a3a7;
+}
+.error-mess {
+    color: red;
+    font-size: 14px;
+}
+.login-facebook {
+    margin: 0 !important;
+    font-size: 14px !important;
+    text-align: center !important;
+}
+.login-facebook:hover {
+    border: #3b5998 solid !important;
+    background-color: #fff !important;
+    color: #3b5998 !important;
+}
+.login:hover {
+    text-decoration: none !important;
+    background-color: transparent;
+    color: #f26b38;
+    border: 1px solid #f26b38;
+    cursor: pointer;
+}
+a:hover {
+    text-decoration: underline !important;
+    color: #000;
+}
+.modal-title {
+    font-size: 20px !important;
+}
+@media screen and (max-width: 768px) {
+    form {
+        box-shadow: none;
+        padding: 50px;
+    }
+}
+@media screen and (max-width: 450px) {
+    .login-container {
+        margin-left: 20px;
+    }
+    form {
+        padding: 30px;
+    }
+    table {
+        width: 350px;
+    }
+    .modify-title {
+        width: 350px;
+    }
+    .login-facebook {
+        display: contents;
+    }
+    .other-login {
+        display: flex;
+        flex-direction: column;
+    }
+}
+@media screen and (max-width: 350px) {
+    form {
+        padding: 10px;
+    }
+    table {
+        width: 250px;
+        padding: 0 20px;
+    }
+    .modify-title {
+        width: 250px;
+    }
+    label {
+        display: none !important;
+    }
+    #username::before {
+        content: "Tên đăng nhập";
+    }
+}
+.login-drop{
+    margin: -18px 0px -5px 0px;
 }
