--- a/sprint_2/figure-shop/public/css/slide.css
+++ b/sprint_2/figure-shop/public/css/slide.css
@@ -135,7 +135,18 @@ img{
     font-size: 11px;
     font-weight: bold;
     padding: 3px 8px;
-    background-color: #4e4e4e;
+    background-color: #fa6e4f;
+    border-radius: 50%;
+    color: white;
+}
+.start-buy{
+    position: absolute;
+    right: -15px;
+    top: -18px;
+    font-size: 11px;
+    font-weight: bold;
+    padding: 3px 8px;
+    background-color: #727070;
     border-radius: 50%;
     color: white;
 }
