--- a/sprint_2/figure-shop/public/css/cart.css
+++ b/sprint_2/figure-shop/public/css/cart.css
@@ -11,9 +11,8 @@
     margin-bottom: 5vh;
 }
 .summary{
+    max-height: 360px;
     background-color: #ddd;
-    border-top-right-radius: 1rem;
-    border-bottom-right-radius: 1rem;
     padding: 4vh;
     color: rgb(65, 65, 65);
 }
