--- a/sprint_2/figure-shop/public/css/slide.css
+++ b/sprint_2/figure-shop/public/css/slide.css
@@ -93,13 +93,16 @@ img{
     padding: 0 0 0 10px;
     width: 50px;
 }
-.nav-link.active.home{
+.nav-link {
+    color: black;
+}
+
+.nav-link.active.home {
     color: #fa6e4f !important;
 }
 /* top header contact */
 .contact{
     margin-left: 15px;
-    /* border-left: 2px solid #C4C4C4; */
 }
 .contact a{
     color: #C4C4C4;
@@ -242,27 +245,10 @@ img{
 .navbar-light .navbar-nav .nav-link {
     font-size: 14px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: rgb(255, 255, 255);
+    color: black;
     text-transform: uppercase;
     line-height: 1.2;
 }
-
-/* .navbar-light .navbar-nav .nav-link.active {
-    color: #fce38a;
-} */
-
-.banner-sub-heading {
-    font-family: 'Sofia Pro Bold';
-    font-size: 35px;
-    color: #F3F4F6;
-    font-weight: 700;
-    line-height: 1.2;
-    text-align: center;
-    margin-bottom: 20px;
-    padding-top: 200px;
-    opacity: 2;
-}
-
 .banner-heading {
     font-size: 15px;
     font-family: 'Sofia Pro Bold';
@@ -277,232 +263,12 @@ img{
     font-weight: 500;
     opacity: 2;
 }
-
-.dashed {
-    background-color: rgb(255, 255, 255);
-    width: 60px;
-    height: 3px !important;
-    opacity: 1;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 60px;
-}
-/* /////////////////// */
-/*.btn,*/
-/*.btn:link,*/
-/*.btn:visited{*/
-/*    text-transform: uppercase;*/
-/*    !* text-decoration: none; *!*/
-/*    padding: 13px 25px 12px 25px;*/
-/*    display: inline-block;*/
-/*    border-radius: 100px;*/
-/*    font-size: 16px;*/
-/*    position: relative;*/
-/*    transition: all .2s;*/
-/*    margin-bottom: 150px;*/
-/*    font-weight: 500;*/
-/*}*/
-
-.carousel-indicators {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    padding: 0;
-    margin-right: 0;
-    margin-bottom: 1rem;
-    margin-left: 0;
-    list-style: none;
-}
-
-.carousel-indicators .indicator {
-    box-sizing: border-box;
-    flex: 1 1 auto;
-    width: auto;
-    height: auto;
-    padding: 0;
-    margin-right: 0;
-    margin-left: 0;
-    cursor: pointer;
-    text-indent: 0;
-    background-color: transparent;
-    border: 0;
-    border-top: 10px solid transparent;
-    border-bottom: 10px solid transparent;
-    opacity: 1;
-    transition: opacity 0.6s ease;
-}
-
-.carousel-indicators .indicator:not(:last-child) {
-    margin-right: 30px;
-}
-
-.indicator .timmer {
-    width: 100%;
-    height: 3px;
-    background-color: #ffffff;
-    margin-bottom: 20px;
-    position: relative;
-}
-
-/* Pseudo Element */
-.indicator .timmer::after {
-    content: "";
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 3px;
-    width: 0;
-    background-color: #c89551;
-}
-
-.indicator.active .timmer::after {
-    width: 100%;
-    transition: width 3s;
-}
-
-.indicator .slide-number {
-    font-size: 24px;
-    font-family: var(--primary-font);
-    color: rgb(255, 255, 255);
-    font-weight: bold;
-    text-transform: uppercase;
-    line-height: 1.2;
-}
-
-.indicator .text {
-    font-size: 18px;
-    font-family: var(--primary-font);
-    color: rgba(255, 255, 255, 0.8);
-    text-transform: uppercase;
-    line-height: 1.2;
-}
-/* service */
-.service-icon i{
-    font-size: 25px;
-    color: #c89551;
-    margin-bottom: 5px;
-    padding-top: 10px;
-}
-.service{
-    margin-top: 5px;
-}
-.service1{
-    margin: 0 5px;
-    border: 1px solid rgba(0,0,0,.125);
-}
-.service-title{
-    font-size: 20px;
-    font-weight: bold;
-    position: relative;
-    margin-bottom: 5px;
-    color: black;
-}
-.service-text{
-    font-size: 12px;
-    font-weight: 500;
-    margin: 0 30px;
-    margin-bottom: 15px;
-}
-.slash{
-    content: '';
-    width: 60px;
-    margin-left: 45%;
-    height: 3px;
-    background: #c89551;
-    opacity: 1;
-    margin: 5px 0 5px 40%;
-}
-/* .inner{
-    background: #ffffff;
-    box-shadow: 1px 1px 20px rgb(0 0 0 / 30%);
-} */
-.service-item{
-    text-align: center;
-    padding: 0px 10px;
-    margin: 10px 0px;
-}
-.service-item:not(:last-child) {
-    border-right: 1px solid #c89551;
-}
-/* product */
-/* body{
-    background-color: #E5E5E5;
-} */
-.products{
-    margin-top: 50px;
-}
-.product-img{
-    background-color: whitesmoke;
-    height: 200px;
-}
-.price-product .price{
-    /* width: 100%; */
-    margin-bottom: 5px;
-    font-size: 17px;
-    font-weight: bold;
-    color: #EB2528;
-}
-.price-product{
-    /* margin-left: 90px; */
-    justify-content: center;
-}
-.price-product .root-price{
-    margin-bottom: 3px;
-    font-size: 12px;
-    font-weight: bold;
-    color: grey;
-    text-decoration: line-through;
-    margin-left: 5px;
-
-}
-.rate-number p{
-    font-size: 12px;
-    font-weight: bold;
-    padding-top: 5px;
-    color: gray;
-
-}
-.stars i{
-    font-size: 11px;
-}
-.product-info{
-    background-color: #F7F7F7;
-}
-.rate{
-    width: 100%;
-    justify-content: space-between;
-}
-.rate-number{
-    /* width: 62%; */
-    text-align: end;
-    /* display: flex;
-    justify-content: flex-end; */
-    padding-right: 15px;
-}
-/* .rate-number p{
-    text-align: end;
-    width: 100%;
-} */
 .stars{
     padding-left: 15px;
 }
-.col-3{
+.col-3 {
     padding: 6px;
 }
-/* .addCart{
-    width: 50%;
-    border: none;
-    padding: 0;
-    margin: 0;
-    background-color: grey;
-    font-size: 12px;
-    padding: 10px;
-    font-weight: bold;
-    color: black;
-} */
-/* hieu ung cho button */
 .addCart{
     width: 100%;
     border: none;
