--- a/sprint_2/figure-shop/public/css/cart.css
+++ b/sprint_2/figure-shop/public/css/cart.css
@@ -140,11 +140,14 @@ b {
     width: 100%;
     height: 100%;
     max-width: 100%;
-    max-height: 75%;
+    max-height: 70%;
 }
 .input-c[type="text"] {
     width: 20px;
     height: 20px;
     border: none;
     text-align: center;
+}
+.card{
+    max-height: 1000px;
 }
